  - ``system.$`` for floating point types now produces a human friendly string
    representation.
  - ``uri.TUrl`` as well as the ``parseurl`` module are now deprecated in favour
    of the new ``TUri`` type in the ``uri`` module.
  - The ``destructor`` pragma has been deprecated. Use the ``override`` pragma
    instead. The destructor's name has to be ``destroy`` now.

  Language Additions
  ------------------

  - There is a new ``parallel`` statement for safe fork&join parallel computing.
  

  Library Additions
  -----------------

  - Added module ``cpuinfo``.
  - Added module ``threadpool``.
  - ``sequtils.distnct`` has been renamed to ``sequtils.deduplicate``.
  - Added ``algorithm.reversed``
  - Added ``uri.combine`` and ``uri.parseUri``.

2014-04-21 Version 0.9.4 released
=================================

The Nimrod development community is proud to announce the release of version
0.9.4 of the Nimrod compiler and tools. **Note: This release has to be
considered beta quality! Lots of new features have been implemented but
unfortunately some do not fullfill our quality standards yet.**

Prebuilt binaries and instructions for building from source are available
on the `download page <download.html>`_.

This release includes about 
`1400 changes <https://github.com/Araq/Nimrod/compare/v0.9.2...v0.9.4>`_
in total including various bug
fixes, new languages features and standard library additions and improvements.
This release brings with it support for user-defined type classes, a brand
new VM for executing Nimrod code at compile-time and new symbol binding
rules for clean templates.

It also introduces support for the brand new
`Babel package manager <https://github.com/nimrod-code/babel>`_ which
has itself seen its first release recently. Many of the wrappers that were
present in the standard library have been moved to separate repositories
and should now be installed using Babel.

Apart from that a new **experimental** Asynchronous IO API has been added via